--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: rgb(124, 14, 203);
+    background-color: rgba(241, 147, 6);
     font-family: "open sans","Helvetica Neue", Arial, Helvetica, sans-serif;
     font-size: 22px;
 }
@@ -15,15 +15,15 @@ a{
 }
 div{
     color: rgb(23, 23, 22);
-    height: 80%;
-    height: 80%;
-    padding: 20px 10px 40px;
-    margin: 20ps;
-    border: 3px solid rgb(3, 9, 119);
-    background-color: rgb(111, 9, 219);
-    border-radius: 30px;
-    border: solid 5px rgb(9, 204, 230);
-    border-radius: 10px 20px 15px 40px;
+    height: 100%;
+    height: 100%;
+    padding: 20px 10px 20px 40px;
+    margin: 10ps;
+    border: 1px solid rgb(215, 230, 4);
+    background-color: rgb(241, 147, 6);
+    border-radius: 15px;
+    border: solid 5px rgb(236, 248, 7);
+    border-radius: 15px 0px 15px 0px;
     box-shadow: 2px 2px 5px;
 
 }
